# airag

./: .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
docs/: implementation-plan.md
docs/grounding/: 00-original-brief.md
docs/research/: subagent-summaries.md
docs/tickets/: INDEX.md  SCHEMA.md  TICKET-001.md  TICKET-002.md  TICKET-003.md  TICKET-004.md  TICKET-005.md  TICKET-006.md  TICKET-007.md  TICKET-008.md  TICKET-009.md  TICKET-010.md  TICKET-011.md  TICKET-012.md  TICKET-013.md  TICKET-014.md  TICKET-015.md  TICKET-016.md  TICKET-017.md  TICKET-018.md  TICKET-019.md  TICKET-020.md  TICKET-021.md  TICKET-022.md  TICKET-023.md
eval/: gold_set.json  run_eval.py
src/airag/: __init__.py  ingestion.py  manifest.py  models.py  retriever.py  server.py
src/airag/chunking/: __init__.py  code.py  json_chunker.py  markdown.py  markup.py  router.py
tests/: conftest.py  smoke_test.py  test_chunking.py  test_embedding_smoke.py  test_ingestion.py  test_manifest.py  test_models.py  test_parsing.py
tests/fixtures/sample_corpus/: api_schema.json  calculator.py  dashboard.html  deployment.yaml  setup_guide.md
