[project]
name = "airag"
version = "0.1.0"
description = "Local RAG system exposing retrieval tools via MCP server."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "qdrant-client",
    "httpx",
    "pydantic",
]

[project.scripts]
airag = "airag.server:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
