[project]
name = "airag"
version = "0.1.0"
description = "Local RAG system exposing retrieval tools via MCP server."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "qdrant-client",
    "httpx",
    "pydantic",
    "tree-sitter>=0.25.2",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "tiktoken>=0.12.0",
    "langchain-text-splitters>=1.1.1",
    "tqdm>=4.67.3",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-bash>=0.25.1",
]

[project.scripts]
airag = "airag.server:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ranx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
